fixed projects page spacing + links

--- a/src/views/components/Navbar/navbar.module.css
+++ b/src/views/components/Navbar/navbar.module.css
@@ -3,7 +3,6 @@
   height: 100%;
   padding-bottom: 1px;
   background: linear-gradient(90deg, var(--blue-100) 0%, var(--blue-700) 100%);
-  border-bottom: solid 1px var(--white);
 }
 
 .wrapperInner {
