--- a/src/views/pages/Projects/projects.module.css
+++ b/src/views/pages/Projects/projects.module.css
@@ -1,7 +1,8 @@
 .grid {
+  height: 100%;
   display: grid;
   grid-template-columns: 210px 200px auto;
-  grid-template-rows: 100vh;
+  grid-template-rows: auto;
 }
 
 .projectSelector {
